--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Saadia91/food-blog/issues"
   },
-  "homepage": "https://github.com/Saadia91/food-blog#readme"
+  "homepage": "https://github.com/Saadia91/food-blog#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
